--- a/Forum/pom.xml
+++ b/Forum/pom.xml
@@ -121,5 +121,20 @@
   		<artifactId>hibernate-core</artifactId>
   		<version>3.6.10.Final</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.springframework.security</groupId>
+  		<artifactId>spring-security-core</artifactId>
+  		<version>4.0.1.RELEASE</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.springframework.security</groupId>
+  		<artifactId>spring-security-web</artifactId>
+  		<version>4.0.1.RELEASE</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.springframework.security</groupId>
+  		<artifactId>spring-security-config</artifactId>
+  		<version>4.0.1.RELEASE</version>
+  	</dependency>
   </dependencies>
 </project>
