--- a/Forum/pom.xml
+++ b/Forum/pom.xml
@@ -136,5 +136,10 @@
   		<artifactId>spring-security-config</artifactId>
   		<version>4.0.1.RELEASE</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.springframework.security</groupId>
+  		<artifactId>spring-security-taglibs</artifactId>
+  		<version>4.0.1.RELEASE</version>
+  	</dependency>
   </dependencies>
 </project>
